added preliminary formatting for Name section

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
   <header>
-    <div class="bannerColor bannerTextColor">
+    <div id="name" class="bannerColor bannerTextColor">
         Myles Carey
     </div>
   </header>
 
   <nav>
-    <ul>
+    <ul class="mainTextColor";>
       <li>About</li>
       <li>Portfolio</li>
       <li>Contact</li>
@@ -30,13 +30,13 @@
       <h2>
         About Me
       </h2>
-      <div>
+      <div class="contentBorderColor">
         rule line goes here
       </div>
       <div> 
         <img src="assets/images/MylesCarey.jpg" alt="Myles Carey" width="117" height="121">
       </div>
-      <div>
+      <div class="mainTextColor">
         <p>
             sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
             sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
@@ -55,7 +55,7 @@
     above footer rule goes here
   </div>
 
-  <footer>
+  <footer class="mainTextColor";>
     Copyright &copy;
   </footer>
 
