Starting to align main, article and footer

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     <div id="name" class="bannerColor bannerTextColor">
         Myles Carey
     </div>
+    <nav>
+        <ul class="mainTextColor">
+          <li>About</li>
+          <li>Portfolio</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
   </header>
 
-  <nav>
-    <ul class="mainTextColor";>
-      <li>About</li>
-      <li>Portfolio</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
+
 
   <!-- outer container -->
-  <section>
+  <section id="mainSection">
     <!-- this is the inner container  -->
     <article>
       <h2>
@@ -51,11 +52,11 @@
     </article>
   </section>
   
-  <div class="bannerColor">
+  <!-- <div class="bannerColor">
     above footer rule goes here
-  </div>
+  </div> -->
 
-  <footer class="mainTextColor";>
+  <footer>
     Copyright &copy;
   </footer>
 
