--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <nav>
         <ul class="mainTextColor">
-          <li>About</li>
-          <li>Portfolio</li>
-          <li>Contact</li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
   </header>
@@ -31,14 +31,11 @@
       <h2>
         About Me
       </h2>
-      <div class="contentBorderColor">
-        rule line goes here
+      <div id="contentRule">
       </div>
-      <div> 
-        <img src="assets/images/MylesCarey.jpg" alt="Myles Carey" width="117" height="121">
-      </div>
+ 
       <div class="mainTextColor">
-        <p>
+        <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey" width="117" height="121">
             sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
             sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
         </p>
@@ -46,7 +43,12 @@
             Suspendisse lobortis tincidunt magna, non tincidunt tortor dictum eu. Proin facilisis eleifend est, ac pharetra leo sempe
         </p>
         <p>
-          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla sit amet sapien sed 
+          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+          sit amet sapien sed 
+          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+          sit amet sapien sed 
+          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+          sit amet sapien sed 
         </p>
       </div>
     </article>
