name alignment corrected, but ready to re-work header technique next

--- a/index.html
+++ b/index.html
@@ -9,19 +9,43 @@
 </head>
 <body>
 
+  <!-- working code  -->
   <header>
     <div id="name" class="bannerColor bannerTextColor">
-        Myles Carey
+      Myles Carey
     </div>
     <nav>
-        <ul class="mainTextColor">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
+          <ul class="mainTextColor">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+    </nav>
   </header>
 
+  <!--  need to see if header can be done 
+        better using nested divs with one 
+        960 article width
+  <header>
+    <div>
+      <div style="background-color: red">
+        header
+      </div>  
+      <div width="960px" style="background-color: blue">
+        inner box
+      </div>
+    </div>    
+
+      <nav>
+            <ul class="mainTextColor">
+              <li><a href="#">About</a></li>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+      </nav> 
+    </header>
+   -->
+   
 
 
   <!-- outer container -->
@@ -59,7 +83,9 @@
   </div> -->
 
   <footer>
-    Copyright &copy;
+    <div>
+      Copyright &copy;
+    </div>
   </footer>
 
 </body>
