major revision on techinque for header, logo and nav bar

--- a/index.html
+++ b/index.html
@@ -5,61 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Portfolio - Myles Carey</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/styleTry.css">
 </head>
 <body>
-
-  <!-- working code  -->
+  <!-- Page Header -->
   <header>
-    <div id="name" class="bannerColor bannerTextColor">
-      Myles Carey
-    </div>
-    <nav>
+    <!-- Outer & Inner Header Containers -->
+    <div id="topLine">
+      <div id="innerTopLine">
+        <!-- Header Name Logo -->
+        <div id="name">
+          Myles Carey
+        </div>
+        <!-- Header Nav Bar -->
+        <nav>
           <ul class="mainTextColor">
             <li><a href="#">About</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
-    </nav>
-  </header>
-
-  <!--  need to see if header can be done 
-        better using nested divs with one 
-        960 article width
-  <header>
-    <div>
-      <div style="background-color: red">
-        header
-      </div>  
-      <div width="960px" style="background-color: blue">
-        inner box
+        </nav> 
       </div>
     </div>    
+  </header>
 
-      <nav>
-            <ul class="mainTextColor">
-              <li><a href="#">About</a></li>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-      </nav> 
-    </header>
-   -->
-   
-
-
-  <!-- outer container -->
+  <!-- Main Section outer container -->
   <section id="mainSection">
-    <!-- this is the inner container  -->
+    <!-- Main Section inner container -->
     <article>
       <h2>
         About Me
       </h2>
+      <!-- rule over bio text-->
       <div id="contentRule">
       </div>
- 
+      <!-- Bio article and image -->
       <div class="mainTextColor">
-        <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey" width="117" height="121">
+        <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey">
             sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
             sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
         </p>
@@ -78,13 +60,10 @@
     </article>
   </section>
   
-  <!-- <div class="bannerColor">
-    above footer rule goes here
-  </div> -->
-
+  <!-- Footer with copyright -->
   <footer>
     <div>
-      Copyright &copy;
+      copyright &copy;
     </div>
   </footer>
 
