Fixed copyright in footer using absolute positioning and transform to then horizontally center

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   
   <!-- Footer with copyright -->
   <footer>
-    <div>
+    <div id="copyRight">
       copyright &copy;
     </div>
   </footer>
