fixed some styling issues that reset.css reveiled

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About Me - Myles Carey</title>
+  <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
+
   <!-- Page Header -->
   <header>
     <!-- Outer & Inner Header Containers -->
-    <div id="topLine">
-      <div id="innerTopLine">
+    <div id="topDiv">
+      <div id="innerTopDiv">
         <!-- Header Name Logo -->
         <div id="name">
           Myles Carey
@@ -33,9 +35,9 @@
   <section id="mainSection">
     <!-- Main Section inner container -->
     <article>
-      <h2>
+      <div id="aboutMe">
         About Me
-      </h2>
+      </div>
       <!-- rule over bio text-->
       <div id="contentRule">
       </div>
