started Contact page

--- a/contact.html
+++ b/contact.html
@@ -34,15 +34,16 @@
   <!-- Main Section outer container -->
   <section id="mainSection">
     <!-- Main Section inner container -->
-    <article>
-      <div id="aboutMe">
-        About Me
+    <form>
+      <div id="mainSectionTitle">
+        Contact
       </div>
       <!-- rule over bio text-->
       <div id="contentRule">
       </div>
+      <div>form goes here</div>
       <!-- Bio article and image -->
-      <div class="mainTextColor">
+      <!-- <div class="mainTextColor">
         <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey">
             sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
             sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
@@ -59,7 +60,7 @@
           sit amet sapien sed 
         </p>
       </div>
-    </article>
+    </form> -->
   </section>
   
   <!-- Footer with copyright -->
