--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <section id="mainSection">
     <!-- Main Section inner container -->
     <article>
-      <div id="aboutMe">
+      <div id="mainSectionTitle">
         About Me
       </div>
       <!-- rule over bio text-->
