--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Main Section outer container -->
   <section id="mainSection">
     <!-- Main Section inner container -->
-    <article>
+    <article class="mainDiv">
       <div id="mainSectionTitle">
         About Me
       </div>
