--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
   <!-- Main Section outer container -->
   <section id="mainSection">
     <!-- Main Section inner container -->
-    <article>
-      <div id="aboutMe">
+    <article class="mainDiv">
+      <div id="mainSectionTitle">
         About Me
       </div>
       <!-- rule over bio text-->
