added social links

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,26 @@
             <li><a href="index.html">About</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li class="socialNav">
+              <a href="https://www.linkedin.com/in/mylescarey2019" title="LinkedIn" target="_blank">
+                <img class="socialIcon" src="assets/images/social-linkedin-circular-button.svg" alt="LinkedIn">
+              </a>
+            </li>
+            <li class="socialNav">
+                <a href="https://github.com/mylescarey2019" title="GitHub" target="_blank">
+                  <img class="socialIcon" src="assets/images/w_github.svg" alt="GitHub">
+                </a>
+            </li>
+            <li class="socialNav">
+                <a href="#" title="Twitter" target="_blank">
+                  <img class="socialIcon" src="assets/images/twitter-circular-button.svg" alt="Twitter">
+                </a>
+            </li> 
+            <li class="socialNav">
+                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding your Portfolio" title="email me" target="_blank">
+                  <img class="socialIcon" src="assets/images/w_gmail.svg" alt="Gmail">
+                </a>
+            </li>             
           </ul>
         </nav> 
       </div>
@@ -65,7 +85,11 @@
   <!-- Footer with copyright -->
   <footer>
     <div id="copyRight">
-      copyright &copy;
+      Copyright &copy;
+    </div>
+    <div id="iconCredit">Icons made by <a href="https://www.freepik.com/?__hstc=57440181.c82af72166a1350e668996cd7af5e963.1560893080864.1560893080864.1560903302513.2&__hssc=57440181.14.1560903302513&__hsfp=2979606616" 
+      title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 		
+      title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
     </div>
   </footer>
 
