Portfolio page first take completed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="socialNav">
-                <a href="#" title="Twitter" target="_blank">
+                <a href="#" title="Coming soon - Twitter" target="_blank">
                   <img class="socialIcon" src="assets/images/twitter-circular-button.svg" alt="Twitter">
                 </a>
             </li> 
@@ -44,7 +44,7 @@
                 <a href="mailto:mylescarey2019@gmail.com?subject=Regarding your Portfolio" title="email me" target="_blank">
                   <img class="socialIcon" src="assets/images/w_gmail.svg" alt="Gmail">
                 </a>
-            </li>             
+             </li>             
           </ul>
         </nav> 
       </div>
