--- a/portfolio.html
+++ b/portfolio.html
@@ -54,15 +54,45 @@
   <!-- Main Section outer container -->
   <section id="mainSection">
     <!-- Main Section inner container -->
-    <article class="mainDiv">
+    <div id="mainDivPosition" class="mainDiv">
       <div id="mainSectionTitle">
-        About Me
+        Portfolio
       </div>
       <!-- rule over bio text-->
       <div id="contentRule">
       </div>
+      <div class="box1">
+        <img class="portImg" src="assets/images/pcnow copy.jpg">
+        <div class="imageText">Band Fan Site
+        </div>
+      </div>
+      <div class="box2">
+        <img class="portImg" src="assets/images/portfolio_ipad.jpg">
+        <div class="imageText">Tablet UX
+        </div>
+      </div>
+      <div class="box3">
+        <img class="portImg" src="assets/images/portfolio_officespace.jpg">
+        <div class="imageText">TPS Reports
+        </div>
+      </div>
+      <div class="box4">
+        <img class="portImg" src="assets/images/portfolio_business2.jpg">
+        <div class="imageText">Collaboration App
+        </div>  
+      </div>
+      <div class="box5">
+        <img class="portImg" src="assets/images/portfolio_city.jpg">
+        <div class="imageText">Urban Finder
+        </div>   
+      </div>
+      <div class="box6">
+        <img class="portImg" src="assets/images/portfolio_tunes.jpg">
+        <div class="imageText">Music Tracker
+        </div> 
+      </div>    
       <!-- Bio article and image -->
-      <div class="mainTextColor">
+      <!-- <div class="mainTextColor">
         <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey">
             sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
             sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
@@ -78,8 +108,8 @@
           Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
           sit amet sapien sed 
         </p>
-      </div>
-    </article>
+      </div> -->
+    </div>
   </section>
   
   <!-- Footer with copyright -->
