made bandfansite link active

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="socialNav">
-                <a href="#" title="Twitter" target="_blank">
+                <a href="#" title="Coming soon - Twitter" target="_blank">
                   <img class="socialIcon" src="assets/images/twitter-circular-button.svg" alt="Twitter">
                 </a>
             </li> 
@@ -62,9 +62,11 @@
       <div id="contentRule">
       </div>
       <div class="box1">
-        <img class="portImg" src="assets/images/pcnow copy.jpg">
-        <div class="imageText">Band Fan Site
-        </div>
+        <a href="https://mylescarey2019.github.io/bandfansite/" target="_blank">
+          <img class="portImg" src="assets/images/pcnow copy.jpg">
+          <div class="imageText">Band Fan Site (live link)
+          </div>
+        </a>
       </div>
       <div class="box2">
         <img class="portImg" src="assets/images/portfolio_ipad.jpg">
