--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="socialNav">
-                <a href="#" title="Twitter" target="_blank">
+                <a href="#" title="Coming soon - Twitter" target="_blank">
                   <img class="socialIcon" src="assets/images/twitter-circular-button.svg" alt="Twitter">
                 </a>
             </li> 
