--- a/portfolio.html
+++ b/portfolio.html
@@ -54,63 +54,46 @@
   <!-- Main Section outer container -->
   <section id="mainSection">
     <!-- Main Section inner container -->
-    <div id="mainDivPosition" class="mainDiv">
+    <!-- <div id="mainDivPosition" class="mainDiv"> -->
+    <div class="clearfix mainDiv">  
       <div id="mainSectionTitle">
         Portfolio
       </div>
       <!-- rule over bio text-->
       <div id="contentRule">
       </div>
-      <div class="box1">
+      <div class="portfolioBox">
         <a href="https://mylescarey2019.github.io/bandfansite/" target="_blank">
-          <img class="portImg" src="assets/images/pcnow copy.jpg">
-          <div class="imageText">Band Fan Site (live link)
+          <img class="portImg portBoxIsActive" src="assets/images/pcnow copy.jpg">
+          <div class="imageText">Band Fan Site
           </div>
         </a>
       </div>
-      <div class="box2">
+      <div class="portfolioBox">
         <img class="portImg" src="assets/images/portfolio_ipad.jpg">
         <div class="imageText">Tablet UX
         </div>
       </div>
-      <div class="box3">
+      <div class="portfolioBox">
         <img class="portImg" src="assets/images/portfolio_officespace.jpg">
         <div class="imageText">TPS Reports
         </div>
       </div>
-      <div class="box4">
+      <div class="portfolioBox">
         <img class="portImg" src="assets/images/portfolio_business2.jpg">
         <div class="imageText">Collaboration App
         </div>  
       </div>
-      <div class="box5">
+      <div class="portfolioBox">
         <img class="portImg" src="assets/images/portfolio_city.jpg">
         <div class="imageText">Urban Finder
         </div>   
       </div>
-      <div class="box6">
+      <div class="portfolioBox">
         <img class="portImg" src="assets/images/portfolio_tunes.jpg">
         <div class="imageText">Music Tracker
         </div> 
-      </div>    
-      <!-- Bio article and image -->
-      <!-- <div class="mainTextColor">
-        <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey">
-            sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
-            sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
-        </p>
-        <p>
-            Suspendisse lobortis tincidunt magna, non tincidunt tortor dictum eu. Proin facilisis eleifend est, ac pharetra leo sempe
-        </p>
-        <p>
-          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
-          sit amet sapien sed 
-          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
-          sit amet sapien sed 
-          Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
-          sit amet sapien sed 
-        </p>
-      </div> -->
+      </div>   
     </div>
   </section>
   
