--- a/portfolio.html
+++ b/portfolio.html
@@ -64,33 +64,39 @@
       </div>
       <div class="portfolioBox">
         <a href="https://mylescarey2019.github.io/bandfansite/" target="_blank">
-          <img class="portImg portBoxIsActive" src="assets/images/pcnow copy.jpg">
+          <img class="portImg portBoxIsActive" src="assets/images/pcnow.jpg"
+                      alt="band picture">
           <div class="imageText">Band Fan Site
           </div>
         </a>
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_ipad.jpg">
+        <img class="portImg" src="assets/images/portfolio_ipad.jpg"
+                   alt="ipad picture">
         <div class="imageText">Tablet UX
         </div>
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_officespace.jpg">
+        <img class="portImg" src="assets/images/portfolio_officespace.jpg"
+                   alt="office picture">
         <div class="imageText">TPS Reports
         </div>
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_business2.jpg">
+        <img class="portImg" src="assets/images/portfolio_business2.jpg"
+                   alt="office team picture">
         <div class="imageText">Collaboration App
         </div>  
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_city.jpg">
+        <img class="portImg" src="assets/images/portfolio_city.jpg"
+                   alt="cityscape picture">
         <div class="imageText">Urban Finder
         </div>   
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_tunes.jpg">
+        <img class="portImg" src="assets/images/portfolio_tunes.jpg"
+                   alt="music player">
         <div class="imageText">Music Tracker
         </div> 
       </div>   
