swept css and html for unnecessary code and refractored as needed

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         </div>
         <!-- Header Nav Bar -->
         <nav>
-          <ul class="mainTextColor">
+          <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="#">Contact</a></li>
@@ -41,7 +41,7 @@
                 </a>
             </li> 
             <li class="socialNav">
-                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding your Portfolio" title="email me" target="_blank">
+                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding%20your%20Portfolio" title="email me">
                   <img class="socialIcon" src="assets/images/w_gmail.svg" alt="Gmail">
                 </a>
             </li>             
@@ -61,7 +61,7 @@
       <!-- rule over bio text-->
       <div id="contentRule">
       </div>
-      <form class="mainTextColor">
+      <form>
         Name <br>
         <input  type="text" name="name"  value="John Smith">
         <br><br>
