--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-
+ 
   <!-- Page Header -->
   <header>
     <!-- Outer & Inner Header Containers -->
@@ -21,7 +21,7 @@
         </div>
         <!-- Header Nav Bar -->
         <nav>
-          <ul class="mainTextColor">
+          <ul>
             <li><a href="#">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -41,7 +41,7 @@
                 </a>
             </li> 
             <li class="socialNav">
-                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding your Portfolio" title="email me" target="_blank">
+                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding%20your%20Portfolio" title="email me">
                   <img class="socialIcon" src="assets/images/w_gmail.svg" alt="Gmail">
                 </a>
              </li>             
@@ -62,7 +62,7 @@
       <div id="contentRule">
       </div>
       <!-- Bio article and image -->
-      <div class="mainTextColor">
+      <div>
         <p><img id="profileImg" src="assets/images/MylesCarey.jpg" alt="Myles Carey">
             sapien dictum mi, non ultrices neque nisi ac ipsum. Morbi tristique erat sapien, ac eleifend augue pretium eget. In ex nulla,
             sollicitudin at malesuada sit amet, interdum nec risus. Proin sed dictum nunc. Maecenas neque lacus, faucibus in aliquet vel, pretium nec neque.
@@ -78,10 +78,42 @@
           Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
           sit amet sapien sed 
         </p>
+        <p>
+            Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+            sit amet sapien sed 
+            Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+            sit amet sapien sed 
+            Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+            sit amet sapien sed 
+          </p>
+          <p>
+              Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+              sit amet sapien sed 
+              Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+              sit amet sapien sed 
+              Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+              sit amet sapien sed 
+            </p>
+            <p>
+                Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+                sit amet sapien sed 
+                Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+                sit amet sapien sed 
+                Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+                sit amet sapien sed 
+              </p>
+              <p>
+                  Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+                  sit amet sapien sed 
+                  Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+                  sit amet sapien sed 
+                  Nulla facilisi. Ut efficitur euismod orci, ut tempus dui maximus sed. Sed in velit a nibh commodo interdum. Pellentesque fringilla
+                  sit amet sapien sed 
+                </p>
       </div>
     </article>
   </section>
-  
+
   <!-- Footer with copyright -->
   <footer>
     <div id="copyRight">
