--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         </div>
         <!-- Header Nav Bar -->
         <nav>
-          <ul class="mainTextColor">
+          <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -41,7 +41,7 @@
                 </a>
             </li> 
             <li class="socialNav">
-                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding your Portfolio" title="email me" target="_blank">
+                <a href="mailto:mylescarey2019@gmail.com?subject=Regarding%20your%20Portfolio" title="email me">
                   <img class="socialIcon" src="assets/images/w_gmail.svg" alt="Gmail">
                 </a>
             </li>             
@@ -100,7 +100,6 @@
         <div class="imageText">Music Tracker
         </div> 
       </div>   
-    </div>
   </section>
   
   <!-- Footer with copyright -->
@@ -113,6 +112,5 @@
       title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
     </div>
   </footer>
-
 </body>
 </html>
