correct typo on bio

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           &nbsp;Now I am excited about and embracing the challenges of learning web development.
         </p>
         <p>
-          In my free time, my two teenage daughters, wife and I enjoy camping on the Washington and Oregon coasts.  &nbsp;I also enjoy reading world and military history, Astronomy (both night sky and solar observing) and watching the Seahawks.
+          In my free time my two teenage daughters, wife and I enjoy camping on the Washington and Oregon coasts. I also enjoy reading world and military history, Astronomy (both night sky and solar observing) and watching the Seahawks.
         </p>
       </div>
     </article>
