--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
           I am an IT professional who loves solving problems through programming and team collaboration.
         </p>
         <p>
-          Programming has been a part of my life since first coding on a Commadore 64 as a teen. &nbsp;Later I learned Visual Basic and coded a graphical 
+          Programming has been a part of my life since first coding on a Commadore 64 as a teen. &nbsp;I moved on to learn Visual Basic by coding a graphical 
           Scrabble game to play-by-email with family and friends.</p>
         <p>
           I have been working with SQL, relational databases and Unix throughout my career.
-          &nbsp;Now I am excited about and embracing the challenges of learning web development.
+          &nbsp;Now, I am excited about and embracing the challenges of learning web development.
         </p>
         <p>
           In my free time my two teenage daughters, wife and I enjoy camping on the Washington and Oregon coasts. I also enjoy reading world and military history, Astronomy (both night sky and solar observing) and watching the Seahawks.
