fixed some comment typos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        Not completly statisified with the html or css.  I think it falls short on semantics,
        readibility and may suffer from css style bloat.  CSS could probably be shortened
        by better selector & class groupings and relying more on inheritenance.
-       Html doesn't feels brute force in places - undoubtably there are more efficient 
+       Html feels brute force in places - undoubtably there are more efficient 
        cleaner methods for some part of the site.
        
        Features:
