added Word Game to portfolio

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Header Nav Bar -->
         <nav>
           <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="#">Xbout</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="socialNav">
