--- a/portfolio.html
+++ b/portfolio.html
@@ -66,14 +66,15 @@
         <a href="https://github.com/mylescarey2019/Word-Guess-Game" target="_blank">
           <img class="portImg portBoxIsActive" src="assets/images/wordGame.jpg"
                       alt="Word guess game">
-          <div class="imageText">Word Guess Game
+          <div class="imageText">Presidential Hangman
           </div>
         </a>
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_ipad.jpg"
+        <a href="https://github.com/mylescarey2019/unit-4-game" target="_blank">
+        <img class="portImg  portBoxIsActive" src="assets/images/rpg2.jpg"
                    alt="ipad picture">
-        <div class="imageText">Tablet UX
+        <div class="imageText">Political Role Playing Game
         </div>
       </div>
       <div class="portfolioBox">
