added readme and updated portfolio project links

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,27 +78,29 @@
         </div>
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_officespace.jpg"
+        <a href="https://github.com/mylescarey2019/TriviaGame" target="_blank">
+        <img class="portImg portBoxIsActive" src="assets/images/PeriodTableQuiz.png"
                    alt="office picture">
-        <div class="imageText">TPS Reports
+        <div class="imageText">Periodic Table Quiz
         </div>
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_business2.jpg"
+          <a href="https://github.com/mylescarey2019/GifTastic" target="_blank">
+        <img class="portImg portBoxIsActive" src="assets/images/gifbreak.jpg"
                    alt="office team picture">
-        <div class="imageText">Collaboration App
+        <div class="imageText">Gif Viewer
         </div>  
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_city.jpg"
+        <img class="portImg place-holder" src="assets/images/portfolio_city.jpg"
                    alt="cityscape picture">
-        <div class="imageText">Urban Finder
+        <div class="imageText">Placeholder
         </div>   
       </div>
       <div class="portfolioBox">
-        <img class="portImg" src="assets/images/portfolio_tunes.jpg"
+        <img class="portImg place-holder" src="assets/images/portfolio_tunes.jpg"
                    alt="music player">
-        <div class="imageText">Music Tracker
+        <div class="imageText">Placeholder
         </div> 
       </div>   
   </section>
