--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Header Nav Bar -->
         <nav>
           <ul>
-            <li><a href="#">Xbout</a></li>
+            <li><a href="#">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="socialNav">
@@ -89,7 +89,7 @@
           I am an IT professional who loves solving problems through programming and team collaboration.
         </p>
         <p>
-          Programming has been a part of my life since first coding on a Commadore 64 as a teen. &nbsp;I moved on to learn Visual Basic by coding a graphical 
+          Programming has been a part of my life since first coding on a Commodore 64 as a teen. &nbsp;I moved on to learn Visual Basic by coding a graphical 
           Scrabble game to play-by-email with family and friends.</p>
         <p>
           I have been working with SQL, relational databases and Unix throughout my career.
